--- a/index.html
+++ b/index.html
@@ -48,27 +48,27 @@
 
     <div class="row text-center text-lg-start align-items-center">
       <div class="col-lg-3 col-md-4 col-6 text-center">
-        <a target="_blank" href="examples/bubble-sort" class="d-block h-100 p-4 border mb-4">
+        <a target="_blank" href="https://kdeepika-brs.github.io/Bubble-Sort/" class="d-block h-100 p-4 border mb-4">
           Bubble sort
         </a>
       </div>
       <div class="col-lg-3 col-md-4 col-6 text-center">
-        <a target="_blank" href="examples/merge-sort" class="d-block h-100 p-4 border mb-4">
+        <a target="_blank" href="https://kdeepika-brs.github.io/Merge-Sort/" class="d-block h-100 p-4 border mb-4">
           Merge sort
         </a>
       </div>
       <div class="col-lg-3 col-md-4 col-6 text-center">
-        <a target="_blank" href="examples/quick-sort" class="d-block h-100 p-4 border mb-4">
+        <a target="_blank" href="https://kdeepika-brs.github.io/Quick-Sort/" class="d-block h-100 p-4 border mb-4">
           Quick sort
         </a>
       </div>
       <div class="col-lg-3 col-md-4 col-6 text-center">
-        <a target="_blank" href="examples/radix-sort" class="d-block h-100 p-4 border mb-4">
+        <a target="_blank" href="https://kdeepika-brs.github.io/Radix-Sort/" class="d-block h-100 p-4 border mb-4">
           Radix sort
         </a>
       </div>
       <div class="col-lg-3 col-md-4 col-6 text-center">
-        <a target="_blank" href="examples/selection-sort" class="d-block h-100 p-4 border mb-4">
+        <a target="_blank" href="https://kdeepika-brs.github.io/Selection-Sort/" class="d-block h-100 p-4 border mb-4">
           Selection sort
         </a>
       </div>
